--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <h4>Issued On: 22 june 2024</h4>
     <h4>Issued To:Bommineni Balu</h4>
     <h4>Institute: Vasireddy Venkatadri Institue of Technology</h4>
-    <h4>Internship:Android Developer Internship(April-June 2024)</h4>
+    <h4>Internship:Android Developer Virtual Internship(April-June 2024)</h4>
     <h4>Grade:D</h4>
     </div>
     <div style="border: solid 1px white">
