--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
     <div ng-show="certverified" style="color:whitesmoke">
     <h3 class="login-box-msg"><img src="images-checked.gif" width="30%"><br>AICTE Internship Certificate is successfully verified</h3>
     <h4>Certificate ID:dd363e43baa80195fdc37f9a9771f0d5 </h4>
-    <h4>Issued On: 22 june 2024</h4>
-    <h4>Issued To:G sasi kumar</h4>
+    <h4>Issued On: 22 March 2024</h4>
+    <h4>Issued To:Chennuri Hari Krishna Reddy</h4>
     <h4>Institute: Vasireddy Venkatadri Institue of Technology</h4>
-    <h4>Internship:Android Developer Virtual Internship(April-June 2024)</h4>
+    <h4>Internship:AI-ML Virtual Internship(January-March 2024)</h4>
     <h4>Grade:D</h4>
     </div>
     <div style="border: solid 1px white">
